--- a/techpack/audio/Makefile
+++ b/techpack/audio/Makefile
@@ -1,23 +1,23 @@
 # auto-detect subdirs
 ifeq ($(CONFIG_ARCH_SDM845), y)
 include $(srctree)/techpack/audio/config/sdm845auto.conf
-export
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/sdm845auto.conf)
 endif
 ifeq ($(CONFIG_ARCH_SDM450), y)
 include $(srctree)/techpack/audio/config/sdm450auto.conf
-export
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/sdm450auto.conf)
 endif
 ifeq ($(CONFIG_ARCH_SDM670), y)
 include $(srctree)/techpack/audio/config/sdm710auto_static.conf
-export
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/sdm710auto.conf)
 endif
 ifeq ($(CONFIG_ARCH_SDXPOORWILLS), y)
 include $(srctree)/techpack/audio/config/sdxpoorwillsauto.conf
-export
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/sdxpoorwillsauto.conf)
 endif
 ifeq ($(CONFIG_ARCH_MSM8953), y)
 include $(srctree)/techpack/audio/config/msm8953auto.conf
-export
+export $(shell sed 's/=.*//' $(srctree)/techpack/audio/config/msm8953auto.conf)
 endif
 
 # Use USERINCLUDE when you must reference the UAPI directories only.
