--- a/drivers/staging/prima/Kbuild
+++ b/drivers/staging/prima/Kbuild
@@ -771,6 +771,11 @@ EXTRA_CFLAGS += $(call cc-disable-warning,non-literal-null-conversion,)
 EXTRA_CFLAGS += $(call cc-disable-warning,typedef-redefinition,)
 
 
+# Silence Clang warning
+ifeq ($(cc-name),clang)
+EXTRA_CFLAGS += -Wno-enum-conversion
+endif
+
 ifeq ($(CONFIG_WLAN_OFFLOAD_PACKETS),y)
 CDEFINES += -DWLAN_FEATURE_OFFLOAD_PACKETS
 endif
