--- a/arch/arm64/configs/vince-perf_defconfig
+++ b/arch/arm64/configs/vince-perf_defconfig
@@ -261,10 +261,8 @@ CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_LD_LLD=y
 # CONFIG_LD_GOLD is not set
 # CONFIG_LTO is not set
-CONFIG_THINLTO=y
-CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
+CONFIG_LTO_GCC=y
 # CONFIG_LTO_NONE is not set
-CONFIG_LTO_CLANG=y
 # CONFIG_CFI_CLANG is not set
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
