--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1520,6 +1520,9 @@ config LD_DEAD_CODE_DATA_ELIMINATION
 	  present. This option is not well tested yet, so use at your
 	  own risk.
 
+config GCC_GRAPHITE
+	  bool "Enable GCC Polyhedral Loop Optimization (Graphite)"
+
 config LTO_GCC
 	bool "Enable Link Time Optimization for GCC"
 
