--- a/arch/arm64/configs/vince-perf_defconfig
+++ b/arch/arm64/configs/vince-perf_defconfig
@@ -114,7 +114,6 @@ CONFIG_SRCU=y
 CONFIG_RCU_STALL_COMMON=y
 CONFIG_RCU_FANOUT=64
 CONFIG_RCU_FANOUT_LEAF=16
-CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_TREE_RCU_TRACE is not set
 # CONFIG_RCU_BOOST is not set
 CONFIG_RCU_KTHREAD_PRIO=0
@@ -139,7 +138,6 @@ CONFIG_CGROUP_SCHED=y
 CONFIG_CGROUP_SCHEDTUNE=y
 CONFIG_FAIR_GROUP_SCHED=y
 # CONFIG_CFS_BANDWIDTH is not set
-CONFIG_RT_GROUP_SCHED=y
 # CONFIG_CGROUP_PIDS is not set
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
@@ -219,7 +217,7 @@ CONFIG_VM_EVENT_COUNTERS=y
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 # CONFIG_SLAB_FREELIST_RANDOM is not set
-CONFIG_SLUB_CPU_PARTIAL=y
+# CONFIG_SLUB_CPU_PARTIAL is not set
 # CONFIG_SYSTEM_DATA_VERIFICATION is not set
 # CONFIG_PROFILING is not set
 CONFIG_TRACEPOINTS=y
@@ -444,7 +442,7 @@ CONFIG_ARCH_NR_GPIO=1280
 # CONFIG_NUMA is not set
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
-CONFIG_PREEMPT=y
+CONFIG_PREEMPT_RT_FULL=y
 CONFIG_PREEMPT_COUNT=y
 # CONFIG_HZ_100 is not set
 # CONFIG_HZ_250 is not set
@@ -3876,7 +3874,6 @@ CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
 # CONFIG_QCOM_DCC_V2 is not set
 # CONFIG_QCOM_DCC is not set
 CONFIG_QTI_RPM_STATS_LOG=y
-CONFIG_QCOM_FORCE_WDOG_BITE_ON_PANIC=y
 # CONFIG_QMP_DEBUGFS_CLIENT is not set
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_MSM_REMOTEQDSS is not set
@@ -4774,6 +4771,7 @@ CONFIG_CRYPTO_ABLK_HELPER=y
 # Authenticated Encryption with Associated Data
 #
 # CONFIG_CRYPTO_CCM is not set
+CONFIG_CRYPTO_CRYPTD=y
 CONFIG_CRYPTO_GCM=y
 # CONFIG_CRYPTO_CHACHA20POLY1305 is not set
 CONFIG_CRYPTO_SEQIV=y
@@ -4881,13 +4879,8 @@ CONFIG_CRYPTO_DEV_QCOM_ICE=y
 # Certificates for signature checking
 #
 CONFIG_ARM64_CRYPTO=y
-CONFIG_CRYPTO_SHA1_ARM64_CE=y
-CONFIG_CRYPTO_SHA2_ARM64_CE=y
-CONFIG_CRYPTO_GHASH_ARM64_CE=y
-CONFIG_CRYPTO_AES_ARM64_CE=y
-CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
-CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
-CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
+CONFIG_CRYPTO_SHA256_ARM64=y
+CONFIG_CRYPTO_AES_ARM64=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_BINARY_PRINTF=y
 
