--- a/arch/arm64/configs/vince-perf_defconfig
+++ b/arch/arm64/configs/vince-perf_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.9.312 Kernel Configuration
+# Linux/arm64 4.9.313 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -102,6 +102,7 @@ CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_PSI=y
+# CONFIG_PSI_DEFAULT_DISABLED is not set
 
 #
 # RCU Subsystem
@@ -172,8 +173,6 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_LZ4 is not set
 # CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE is not set
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
-CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION=y
-CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_SYSCTL=y
 CONFIG_HAVE_UID16=y
 CONFIG_SYSCTL_EXCEPTION_TRACE=y
@@ -259,8 +258,7 @@ CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_CC_STACKPROTECTOR_REGULAR is not set
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_THIN_ARCHIVES=y
-# CONFIG_LD_GOLD is not set
-CONFIG_LD_LLD=y
+CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_LTO=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 # CONFIG_LTO_NONE is not set
@@ -496,7 +494,6 @@ CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 # CONFIG_IDLE_PAGE_TRACKING is not set
 # CONFIG_FORCE_ALLOC_FROM_DMA_ZONE is not set
 CONFIG_PROCESS_RECLAIM=y
-CONFIG_ANDROID_PR_KILL=y
 CONFIG_ARCH_SUPPORTS_SPECULATIVE_PAGE_FAULT=y
 CONFIG_SPECULATIVE_PAGE_FAULT=y
 CONFIG_ARM64_DMA_USE_IOMMU=y
@@ -1609,7 +1606,6 @@ CONFIG_CNSS_UTILS=y
 #
 # CONFIG_WAN is not set
 # CONFIG_ISDN is not set
-# CONFIG_NVM is not set
 
 #
 # Input device support
@@ -4263,6 +4259,7 @@ CONFIG_RAS=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+# CONFIG_ANDROID_BINDERFS is not set
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 # CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 # CONFIG_LIBNVDIMM is not set
