defconfig: Fix cdae0b0
* The regen disabled PRLMK and dropped a few LD flags.

--- a/arch/arm64/configs/vince-perf_defconfig
+++ b/arch/arm64/configs/vince-perf_defconfig
@@ -259,6 +259,9 @@ CONFIG_CC_STACKPROTECTOR=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_THIN_ARCHIVES=y
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
+CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION=y
+CONFIG_LD_LLD=y
+# CONFIG_LD_GOLD is not set
 CONFIG_LTO=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 # CONFIG_LTO_NONE is not set
@@ -3677,6 +3680,7 @@ CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 # CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
 CONFIG_ION=y
+CONFIG_ANDROID_PR_KILL=y
 # CONFIG_ION_TEST is not set
 # CONFIG_ION_DUMMY is not set
 CONFIG_ION_MSM=y
