--- a/arch/arm64/configs/vince-perf_defconfig
+++ b/arch/arm64/configs/vince-perf_defconfig
@@ -262,7 +262,8 @@ CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_LD_LLD=y
 # CONFIG_LD_GOLD is not set
-CONFIG_LTO=y
+# CONFIG_LTO is not set
+CONFIG_THINLTO=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 # CONFIG_LTO_NONE is not set
 CONFIG_LTO_CLANG=y
