--- a/arch/arm64/configs/vince-perf_defconfig
+++ b/arch/arm64/configs/vince-perf_defconfig
@@ -264,7 +264,8 @@ CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_LD_LLD=y
 # CONFIG_LTO is not set
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
-CONFIG_LTO_NONE=y
+# CONFIG_LTO_NONE is not set
+CONFIG_LTO_GCC=y
 # CONFIG_LTO_CLANG is not set
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
