--- a/arch/arm64/configs/vince-perf_defconfig
+++ b/arch/arm64/configs/vince-perf_defconfig
@@ -175,6 +175,8 @@ CONFIG_RD_GZIP=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION=y
 # CONFIG_LD_DEAD_CODE_DATA_ELIMINATION is not set
+# CONFIG_GCC_GRAPHITE is not set
+# CONFIG_LTO_GCC is not set
 CONFIG_SYSCTL=y
 CONFIG_HAVE_UID16=y
 CONFIG_SYSCTL_EXCEPTION_TRACE=y
