--- a/arch/arm64/configs/vince-perf_defconfig
+++ b/arch/arm64/configs/vince-perf_defconfig
@@ -175,6 +175,7 @@ CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
+CONFIG_LLVM_POLLY=y
 # CONFIG_GCC_GRAPHITE is not set
 # CONFIG_LTO_GCC is not set
 CONFIG_SYSCTL=y
@@ -266,7 +267,8 @@ CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_LD_LLD=y
 # CONFIG_LTO is not set
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
-CONFIG_LTO_NONE=y
+# CONFIG_LTO_NONE is not set
+CONFIG_THINLTO=y
 # CONFIG_LTO_CLANG is not set
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
