defconfig: enable vDSO 32
Signed-off-by: rk134 <rahul-k@bigdi.cc>

--- a/arch/arm64/configs/vince-perf_defconfig
+++ b/arch/arm64/configs/vince-perf_defconfig
@@ -47,7 +47,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-sb-remaster.1"
+CONFIG_LOCALVERSION="-liquidkrnl-1.2"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="RoadRUNNER"
 CONFIG_SWAP=y
@@ -620,7 +620,7 @@ CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
 CONFIG_KUSER_HELPERS=y
 CONFIG_KEYS_COMPAT=y
-# CONFIG_COMPAT_VDSO is not set
+CONFIG_COMPAT_VDSO=y
 CONFIG_CROSS_COMPILE_ARM32=""
 
 #
