--- a/arch/arm64/configs/vince-perf_defconfig
+++ b/arch/arm64/configs/vince-perf_defconfig
@@ -175,7 +175,6 @@ CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
-CONFIG_LLVM_POLLY=y
 # CONFIG_GCC_GRAPHITE is not set
 # CONFIG_LTO_GCC is not set
 CONFIG_SYSCTL=y
@@ -267,8 +266,7 @@ CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_LD_LLD=y
 # CONFIG_LTO is not set
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
-# CONFIG_LTO_NONE is not set
-CONFIG_THINLTO=y
+CONFIG_LTO_NONE=y
 # CONFIG_LTO_CLANG is not set
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
@@ -345,9 +343,11 @@ CONFIG_BLOCK_COMPAT=y
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_ANXIETY=y
 CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_ANXIETY is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK=y
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK_BH=y
@@ -622,6 +622,7 @@ CONFIG_KUSER_HELPERS=y
 CONFIG_KEYS_COMPAT=y
 CONFIG_COMPAT_VDSO=y
 CONFIG_CROSS_COMPILE_ARM32=""
+CONFIG_THUMB2_COMPAT_VDSO=y
 
 #
 # Power management options
@@ -677,18 +678,18 @@ CONFIG_CPU_FREQ_TIMES=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_BOOST is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 # CONFIG_CPU_INPUT_BOOST is not set
+CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 
 #
 # CPU frequency scaling drivers
@@ -2770,6 +2771,7 @@ CONFIG_QCOM_KGSL=y
 CONFIG_QCOM_ADRENO_DEFAULT_GOVERNOR="msm-adreno-tz"
 CONFIG_QCOM_KGSL_IOMMU=y
 # CONFIG_DRM is not set
+# CONFIG_DRM_CLIENT_BOOTSPLASH is not set
 # CONFIG_DRM_DP_CEC is not set
 
 #
