--- a/arch/arm64/configs/vince-perf_defconfig
+++ b/arch/arm64/configs/vince-perf_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.9.312 Kernel Configuration
+# Linux/arm64 4.9 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -68,7 +68,6 @@ CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_IRQ_DOMAIN=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_HANDLE_DOMAIN_IRQ=y
-# CONFIG_IRQ_DOMAIN_DEBUG is not set
 CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_SPARSE_IRQ=y
 CONFIG_ARCH_CLOCKSOURCE_DATA=y
@@ -173,7 +172,6 @@ CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
-CONFIG_LLVM_POLLY=y
 # CONFIG_GCC_GRAPHITE is not set
 # CONFIG_LTO_GCC is not set
 CONFIG_SYSCTL=y
@@ -214,6 +212,7 @@ CONFIG_HAVE_PERF_EVENTS=y
 #
 CONFIG_PERF_EVENTS=y
 # CONFIG_PERF_USER_SHARE is not set
+# CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 # CONFIG_VM_EVENT_COUNTERS is not set
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
@@ -237,6 +236,7 @@ CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_GENERIC_IDLE_POLL_SETUP=y
 CONFIG_ARCH_HAS_FORTIFY_SOURCE=y
+CONFIG_ARCH_HAS_SET_MEMORY=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
@@ -264,9 +264,8 @@ CONFIG_LLVM_POLLY=y
 CONFIG_LD_LLD=y
 # CONFIG_LTO is not set
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
-# CONFIG_LTO_NONE is not set
 CONFIG_THINLTO=y
-# CONFIG_LTO_CLANG is not set
+CONFIG_LTO_CLANG=y
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
@@ -289,7 +288,6 @@ CONFIG_COMPAT_OLD_SIGACTION=y
 #
 # GCOV-based kernel profiling
 #
-# CONFIG_GCOV_KERNEL is not set
 CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
@@ -342,9 +340,11 @@ CONFIG_BLOCK_COMPAT=y
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_ANXIETY=y
 CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_ANXIETY is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK=y
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK_BH=y
@@ -540,7 +540,6 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_FRONTSWAP is not set
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
-# CONFIG_CMA_DEBUGFS is not set
 CONFIG_CMA_AREAS=7
 # CONFIG_ZPOOL is not set
 # CONFIG_ZBUD is not set
@@ -619,6 +618,7 @@ CONFIG_KUSER_HELPERS=y
 CONFIG_KEYS_COMPAT=y
 CONFIG_COMPAT_VDSO=y
 CONFIG_CROSS_COMPILE_ARM32=""
+CONFIG_THUMB2_COMPAT_VDSO=y
 
 #
 # Power management options
@@ -674,18 +674,18 @@ CONFIG_CPU_FREQ_TIMES=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_BOOST is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 # CONFIG_CPU_INPUT_BOOST is not set
+CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 
 #
 # CPU frequency scaling drivers
@@ -1039,7 +1039,6 @@ CONFIG_BRIDGE_EBT_BROUTE=y
 # CONFIG_TIPC is not set
 # CONFIG_ATM is not set
 CONFIG_L2TP=y
-# CONFIG_L2TP_DEBUGFS is not set
 CONFIG_L2TP_V3=y
 CONFIG_L2TP_IP=y
 CONFIG_L2TP_ETH=y
@@ -1170,7 +1169,6 @@ CONFIG_BT=y
 # CONFIG_BT_LE is not set
 # CONFIG_BT_LEDS is not set
 # CONFIG_BT_SELFTEST is not set
-CONFIG_BT_DEBUGFS=y
 
 #
 # Bluetooth device drivers
@@ -1202,7 +1200,6 @@ CONFIG_CFG80211_CERTIFICATION_ONUS=y
 CONFIG_CFG80211_REG_CELLULAR_HINTS=y
 # CONFIG_CFG80211_REG_RELAX_NO_IR is not set
 CONFIG_CFG80211_DEFAULT_PS=y
-# CONFIG_CFG80211_DEBUGFS is not set
 CONFIG_CFG80211_INTERNAL_REGDB=y
 # CONFIG_CFG80211_CRDA_SUPPORT is not set
 # CONFIG_CFG80211_WEXT is not set
@@ -1264,7 +1261,6 @@ CONFIG_REGMAP_SPI=y
 CONFIG_REGMAP_SPMI=y
 CONFIG_REGMAP_MMIO=y
 # CONFIG_AQT_REGMAP is not set
-# CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS is not set
 # CONFIG_REGMAP_SND_DIGCDC is not set
 CONFIG_DMA_SHARED_BUFFER=y
 # CONFIG_FENCE_TRACE is not set
@@ -1318,7 +1314,6 @@ CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 CONFIG_ZRAM=y
 CONFIG_ZRAM_WRITEBACK=y
-# CONFIG_ZRAM_MEMORY_TRACKING is not set
 # CONFIG_BLK_DEV_COW_COMMON is not set
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
@@ -2118,7 +2113,6 @@ CONFIG_GPIO_SYSFS=y
 # CONFIG_GPIO_MOCKUP is not set
 # CONFIG_GPIO_PL061 is not set
 CONFIG_GPIO_QPNP_PIN=y
-# CONFIG_GPIO_QPNP_PIN_DEBUG is not set
 # CONFIG_GPIO_SYSCON is not set
 # CONFIG_GPIO_XGENE is not set
 # CONFIG_GPIO_XILINX is not set
@@ -2825,7 +2819,6 @@ CONFIG_FB_MSM_MDSS_DSI_CTRL_STATUS=y
 # CONFIG_FB_MSM_MDSS_EDP_PANEL is not set
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
-# CONFIG_FB_MSM_MDSS_FRC_DEBUG is not set
 CONFIG_ENABLE_PM_TP_SUSPEND_RESUME=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_SSD1307 is not set
@@ -3624,7 +3617,6 @@ CONFIG_QCOM_SPS_DMA=y
 # DMABUF options
 #
 CONFIG_SYNC_FILE=y
-# CONFIG_SW_SYNC is not set
 # CONFIG_AUXDISPLAY is not set
 CONFIG_UIO=y
 # CONFIG_UIO_PDRV_GENIRQ is not set
@@ -3935,9 +3927,7 @@ CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
 # CONFIG_QCOM_DCC is not set
 CONFIG_QTI_RPM_STATS_LOG=y
 CONFIG_QCOM_FORCE_WDOG_BITE_ON_PANIC=y
-# CONFIG_QMP_DEBUGFS_CLIENT is not set
 CONFIG_MEM_SHARE_QMI_SERVICE=y
-# CONFIG_MSM_REMOTEQDSS is not set
 # CONFIG_QSEE_IPC_IRQ_BRIDGE is not set
 CONFIG_SERIAL_NUM=y
 # CONFIG_MSM_JTAGV8 is not set
@@ -4321,6 +4311,7 @@ CONFIG_RAS=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+# CONFIG_ANDROID_BINDERFS is not set
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 # CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 # CONFIG_LIBNVDIMM is not set
@@ -4374,7 +4365,6 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
 CONFIG_F2FS_FS=y
-CONFIG_F2FS_STAT_FS=y
 CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
@@ -4547,7 +4537,6 @@ CONFIG_NLS_UTF8=y
 CONFIG_PRINTK_TIME=y
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 # CONFIG_BOOT_PRINTK_DELAY is not set
-# CONFIG_DYNAMIC_DEBUG is not set
 # CONFIG_DEBUG_MODULE_LOAD_INFO is not set
 
 #
@@ -4580,7 +4569,9 @@ CONFIG_DEBUG_KERNEL=y
 # Memory Debugging
 #
 # CONFIG_PAGE_EXTENSION is not set
+# CONFIG_DEBUG_PAGEALLOC is not set
 # CONFIG_PAGE_POISONING is not set
+# CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_SLUB_STATS is not set
 CONFIG_HAVE_DEBUG_KMEMLEAK=y
 # CONFIG_DEBUG_KMEMLEAK is not set
@@ -4630,6 +4621,11 @@ CONFIG_SCHEDSTATS=y
 CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_KOBJECT is not set
 CONFIG_HAVE_DEBUG_BUGVERBOSE=y
+# CONFIG_DEBUG_LIST is not set
+# CONFIG_DEBUG_PI_LIST is not set
+# CONFIG_DEBUG_SG is not set
+# CONFIG_DEBUG_NOTIFIERS is not set
+# CONFIG_DEBUG_CREDENTIALS is not set
 
 #
 # RCU Debugging
@@ -4641,6 +4637,14 @@ CONFIG_HAVE_DEBUG_BUGVERBOSE=y
 # CONFIG_RCU_TORTURE_TEST is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=21
 CONFIG_RCU_PANIC_ON_STALL=0
+# CONFIG_RCU_TRACE is not set
+# CONFIG_RCU_EQS_DEBUG is not set
+# CONFIG_DEBUG_WQ_FORCE_RR_CPU is not set
+# CONFIG_DEBUG_BLOCK_EXT_DEVT is not set
+# CONFIG_CPU_HOTPLUG_STATE_CONTROL is not set
+# CONFIG_NOTIFIER_ERROR_INJECTION is not set
+# CONFIG_FAULT_INJECTION is not set
+# CONFIG_LATENCYTOP is not set
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
@@ -4655,7 +4659,6 @@ CONFIG_TRACING_SUPPORT=y
 #
 # Runtime Testing
 #
-# CONFIG_LKDTM is not set
 # CONFIG_TEST_LIST_SORT is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_RBTREE_TEST is not set
