defconfig: regen + enable thinLTO + POLLY
Signed-off-by: rk134 <rahul-k@bigdi.cc>

--- a/arch/arm64/configs/vince-perf_defconfig
+++ b/arch/arm64/configs/vince-perf_defconfig
@@ -257,8 +257,10 @@ CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_LD_LLD=y
 # CONFIG_LTO is not set
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
-CONFIG_LTO_NONE=y
-# CONFIG_LTO_CLANG is not set
+# CONFIG_LTO_NONE is not set
+CONFIG_LTO_CLANG=y
+CONFIG_LTO_CLANG_THIN=y
+CONFIG_LLVM_POLLY=y
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
@@ -417,6 +419,7 @@ CONFIG_ARCH_MSM8953=y
 CONFIG_ARM64_ERRATUM_845719=y
 # CONFIG_ARM64_ERRATUM_843419 is not set
 # CONFIG_ARM64_ERRATUM_1024718 is not set
+CONFIG_ARM64_ERRATUM_1188873=y
 # CONFIG_CAVIUM_ERRATUM_22375 is not set
 # CONFIG_CAVIUM_ERRATUM_23154 is not set
 # CONFIG_CAVIUM_ERRATUM_27456 is not set
@@ -503,7 +506,6 @@ CONFIG_FORCE_MAX_ZONEORDER=11
 # CONFIG_UNMAP_KERNEL_AT_EL0 is not set
 # CONFIG_HARDEN_BRANCH_PREDICTOR is not set
 CONFIG_ARM64_SSBD=y
-CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
@@ -1164,7 +1166,6 @@ CONFIG_MAY_USE_DEVLINK=y
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_IPC_ROUTER_NODE_ID=1
-CONFIG_IPC_ROUTER_WAKEUP_MS=0
 # CONFIG_IPC_ROUTER_FIFO_XPRT is not set
 CONFIG_HAVE_EBPF_JIT=y
 
@@ -2755,7 +2756,6 @@ CONFIG_QCOM_KGSL=y
 CONFIG_QCOM_ADRENO_DEFAULT_GOVERNOR="msm-adreno-tz"
 CONFIG_QCOM_KGSL_IOMMU=y
 # CONFIG_DRM is not set
-# CONFIG_DRM_CLIENT_BOOTSPLASH is not set
 # CONFIG_DRM_DP_CEC is not set
 
 #
