defconfig: regen + add pelt options
Signed-off-by: rk134 <rahul-k@bigdi.cc>

--- a/arch/arm64/configs/vince-perf_defconfig
+++ b/arch/arm64/configs/vince-perf_defconfig
@@ -127,6 +127,13 @@ CONFIG_LOG_BUF_SHIFT=17
 # CONFIG_CONSOLE_FLUSH_ON_HOTPLUG is not set
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=17
 CONFIG_GENERIC_SCHED_CLOCK=y
+
+#
+# FAIR Scheuler tunables
+#
+CONFIG_PELT_UTIL_HALFLIFE_32=y
+# CONFIG_PELT_UTIL_HALFLIFE_16 is not set
+# CONFIG_PELT_UTIL_HALFLIFE_8 is not set
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
 CONFIG_CGROUPS=y
 # CONFIG_MEMCG is not set
@@ -170,8 +177,6 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_LZ4 is not set
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
-CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION=y
-CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_SYSCTL=y
 CONFIG_HAVE_UID16=y
 CONFIG_SYSCTL_EXCEPTION_TRACE=y
@@ -252,15 +257,14 @@ CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_CC_STACKPROTECTOR_NONE is not set
 # CONFIG_CC_STACKPROTECTOR_REGULAR is not set
 CONFIG_CC_STACKPROTECTOR_STRONG=y
-# CONFIG_LD_BFD is not set
-# CONFIG_LD_GOLD is not set
-CONFIG_LD_LLD=y
-# CONFIG_LTO is not set
+CONFIG_THIN_ARCHIVES=y
+CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
+CONFIG_LTO=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 # CONFIG_LTO_NONE is not set
 CONFIG_LTO_CLANG=y
 CONFIG_LTO_CLANG_THIN=y
-CONFIG_LLVM_POLLY=y
+# CONFIG_CFI_CLANG is not set
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
@@ -606,6 +610,7 @@ CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_STAT_DETAILS=y
 CONFIG_CPU_FREQ_TIMES=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
@@ -617,12 +622,11 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL=y
-CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CONFIG_CPU_BOOST is not set
 # CONFIG_CPU_FREQ_GOV_SCHEDUTIL is not set
+CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 
 #
 # CPU frequency scaling drivers
